[tool.poetry]
name = "bluto"
version = "2.4.20"
description = """DNS Recon | Brute Forcer | DNS Zone Transfer | DNS Wild Card Checks
    DNS Wild Card Brute Forcer | Email Enumeration | Staff Enumeration
    Compromised Account Checking"""
authors = ["Your Name <you@example.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
docopt = "^0.6.2"
dnspython = "^2.2.0"
termcolor = "^1.1.0"
requests = {extras = ["security"], version = "^2.27.1"}
lxml = "^4.8.0"
oletools = "^0.60"
pdfminer = "^20191125"
python-whois = "^0.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
include = ["bluto"]
exclude = ["**/node_modules",
    "**/__pycache__",
    ".git",
]

# the following path is produced with "poetry env info --path"
venvPath = "/home/kali/.cache/pypoetry/virtualenvs"
venv = "bluto-nsOZVHcf-py3.9"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]