[tool.poetry]
name = "bluto"
version = "2.4.22"
authors = ["Darryl Lane <DarrylLane101@gmail.com>"]
description = "Some description here"
license = "GPL"
repository = "https://github.com/darryllane/Bluto"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/darryllane/Bluto/issues"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.10.0"
docopt = "^0.6.2"
dnspython = "^2.2.0"
termcolor = "^1.1.0"
requests = {extras = ["security"], version = "^2.27.1"}
lxml = "^4.9.0"
oletools = "^0.60"
pdfminer = "^20191125"
python-whois = "^0.7.3"

[tool.poetry.dev-dependencies]
pyright = "^1.1.225"
importmagic = "^0.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bluto = 'bluto.cli:main'


[tool.pyright]
include = ["bluto"]
exclude = ["**/node_modules",
    "**/__pycache__",
    ".git",
]

# the following path is produced with "poetry env info --path"
# this *must* be modified in order to make pyright work

venvPath = "/home/kali/.cache/pypoetry/virtualenvs"
venv = "bluto-nsOZVHcf-py3.9"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
